разметка блока header

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,4 +3,15 @@
 $white: #fff;
 $black: #000;
 
+$blue: #061e37;
+$blue1: #80d8ff;
+$blue2: #82b1ff;
+$blueGray: #b0bec5;
+$blueGray2: #78909c;
+$blueGray3: #90a4ae;
+$blueDark: #384b5f;
+$purple: #b388ff;
+$purpleLight: #ea80fc;
+$greenLight: #1de9b6;
+
 // viewport
