--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,6 +4,9 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
+    title Dart
   body 
-    h1 Hello World 
+    h1.visually-hidden Dart
+    .top
+      .top__wrap
+        include parts/header.pug
