--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -1,6 +1,7 @@
 body {
-  margin: 0;
   padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
   font-size: 16px;
 }
 
@@ -9,7 +10,7 @@ body {
 }
 
 .wrap {
-  @include min-max(320px, 1200px, 15px);
+  @include min-max(320px, 1440px, 15px);
 }
 
 .visually-hidden {
