стилизация блока header

--- a/src/pug/parts/header.pug
+++ b/src/pug/parts/header.pug
@@ -14,4 +14,4 @@ header.header
       li.menu__item
         a(href="#").menu__link Help
     .header__right
-      a.header__button sign up
+      a(href="#").header__button sign up
