--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,9 +4,10 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet", href="css/style.css")
     title Dart
   body 
     h1.visually-hidden Dart
     .top
-      .top__wrap
+      .top__wrap.wrap
         include parts/header.pug
