--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -2,7 +2,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Raleway", sans-serif;
-  font-size: 16px;
+  font-size: 15px;
+  line-height: 25px;
 }
 
 .container {
