--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,3 +1,3 @@
-@include font-include($font-name: "Roboto", $font-weight: 400, $woff: "../fonts/Raleway-Regular.woff", $woff2: "../fonts/Raleway-Regular.woff2");
-@include font-include($font-name: "Roboto", $font-weight: 700, $woff: "../fonts/Raleway-SemiBold.woff", $woff2: "../fonts/Raleway-SemiBold.woff2");
-@include font-include($font-name: "Roboto", $font-weight: 300, $woff: "../fonts/Raleway-ExtraBold.woff", $woff2: "../fonts/Raleway-ExtraBold.woff2");
+@include font-include($font-name: "Raleway", $font-weight: 400, $woff: "../fonts/Raleway-Regular.woff", $woff2: "../fonts/Raleway-Regular.woff2");
+@include font-include($font-name: "Raleway", $font-weight: 600, $woff: "../fonts/Raleway-SemiBold.woff", $woff2: "../fonts/Raleway-SemiBold.woff2");
+@include font-include($font-name: "Raleway", $font-weight: 800, $woff: "../fonts/Raleway-ExtraBold.woff", $woff2: "../fonts/Raleway-ExtraBold.woff2");
