--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -7,6 +7,14 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+
+  @media (max-width: 980px) {
+    justify-content: center;
+  }
+}
+
+.header__logo {
+  margin-bottom: 15px;
 }
 
 .header__logo,
@@ -29,5 +37,16 @@
   &:hover {
     color: $blue;
     border-color: $blue;
+  }
+
+  @media (max-width: 980px) {
+    margin: 15px auto 0;
+  }
+}
+
+.header__menu {
+  @media (max-width: 980px) {
+    flex-basis: 100%;
+    justify-content: center;
   }
 }
