--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,3 +12,4 @@ html(lang="ru")
       .top__wrap.wrap
         include parts/header.pug
         include parts/banner.pug
+    include parts/features.pug
