стилизация и адаптация блока features

--- a/src/pug/parts/features.pug
+++ b/src/pug/parts/features.pug
@@ -1,21 +1,21 @@
 section.features.wrap
-  h2.fatures__title Easy &amp; Useful
+  h2.features__title Easy &amp; Useful
   h3.features__subtitle Project Management Tool
   p.features__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
   ul.features__list
     li.features__item
       p.features__img
         img(src="img/calendar.png", alt="График работы", width="68", height="70")
-      h4.faetures__name Title Goes Here
+      h4.features__name Title Goes Here
       p.features__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     li.features__item
       p.features__img
         img(src="img/user.png", alt="Команда", width="58", height="80")
-      h4.faetures__name Title Goes Here
+      h4.features__name Title Goes Here
       p.features__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     li.features__item
       p.features__img
         img(src="img/worker.png", alt="Работник", width="68", height="71")
-      h4.faetures__name Title Goes Here
+      h4.features__name Title Goes Here
       p.features__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   a(href="#").features__button Get started
