--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -9,13 +9,13 @@
 .menu__item {
   margin: 10px 25px;
 
-  &:first-child {
+  /* &:first-child {
     margin-left: 0;
   }
 
   &:last-child {
     margin-right: 0;
-  }
+  } */
 }
 
 .menu__link {
