минимальная разметка блока services

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,3 +14,4 @@ html(lang="ru")
         include parts/banner.pug
     include parts/features.pug
     include parts/counts.pug
+    include parts/services.pug
