стилизация и адаптация блока services

--- a/src/pug/parts/services.pug
+++ b/src/pug/parts/services.pug
@@ -3,52 +3,52 @@ section.services.wrap
   p.services__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
   .services__block
   
-    .services__item.services__item--statistic
+    .services__item.services__item--active
       header.services__header
-        p.services__title Statistics
-        button(aria-label="Открыть меню").services__button
+        p.services__name.services__name--statistic Statistics
+        button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(href="img/img1.jpg", alt="statistic", width="250", height="150")
+          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 
-    .services__item.services__item--inbox
+    .services__item
       header.services__header
-        p.services__title inbox
-        button(aria-label="Открыть меню").services__button
+        p.services__name.services__name--inbox inbox
+        button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(href="img/img1.jpg", alt="statistic", width="250", height="150")
+          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 
-    .services__item.services__item--team
+    .services__item
       header.services__header
-        p.services__title team
-        button(aria-label="Открыть меню").services__button
+        p.services__name.services__name--team team
+        button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(href="img/img1.jpg", alt="statistic", width="250", height="150")
+          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 
-    .services__item.services__item--settings
+    .services__item
       header.services__header
-        p.services__title settings
-        button(aria-label="Открыть меню").services__button
+        p.services__name.services__name--settings settings
+        button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(href="img/img1.jpg", alt="statistic", width="250", height="150")
+          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
     
-    .services__item.services__item--feed
+    .services__item
       header.services__header
-        p.services__title feed
-        button(aria-label="Открыть меню").services__button
+        p.services__name.services__name--feed feed
+        button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(href="img/img1.jpg", alt="statistic", width="250", height="150")
+          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
