разметка блока reviews

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,3 +15,4 @@ html(lang="ru")
     include parts/features.pug
     include parts/counts.pug
     include parts/services.pug
+    include parts/reviews.pug
