стилизация и адаптация блока reviews

--- a/src/pug/parts/reviews.pug
+++ b/src/pug/parts/reviews.pug
@@ -9,10 +9,12 @@ section.reviews
       .reviews__item
         .reviews__avatar
           img(src="img/quote1.jpg", alt="Аватар Jonh Doe", width="60", height="60").reviews__img
-        p.reviews__author Jonh Doe
-        blockquote.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        .reviews__quote-wrap
+          p.reviews__author Jonh Doe
+          blockquote.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
       .reviews__item
         .reviews__avatar
           img(src="img/quote2.jpg", alt="Аватар Khalessi", width="60", height="60").reviews__img
-        p.reviews__author Khalessi
-        blockquote.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        .reviews__quote-wrap
+          p.reviews__author Khalessi
+          blockquote.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
