минимальная разметка блока team

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -16,3 +16,4 @@ html(lang="ru")
     include parts/counts.pug
     include parts/services.pug
     include parts/reviews.pug
+    include parts/team.pug
