верстка и адаптация блока team

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "normalize";
 @import "core";
 
+@import "blocks/social";
 @import "blocks/top";
 @import "blocks/header";
 @import "blocks/menu";
@@ -14,3 +15,4 @@
 @import "blocks/counts";
 @import "blocks/services";
 @import "blocks/reviews";
+@import "blocks/team";
