--- a/src/pug/parts/team.pug
+++ b/src/pug/parts/team.pug
@@ -20,7 +20,7 @@ section.team.wrap
         ul.team__social.social
           li.social__item
             a(href="#").social__link
-              svg(width="18", height="16", aria-label="Twitter Sophie Turner").social__svg
+              svg(width="18", height="18", aria-label="Twitter Sophie Turner").social__svg
                 use(xlink:href="img/symbol/sprite.svg#twitter")
           li.social__item
             a(href="#").social__link
@@ -36,7 +36,54 @@ section.team.wrap
                 use(xlink:href="img/symbol/sprite.svg#dribbble")
           li.social__item
             a(href="#").social__link
-              svg(width="18", height="12", aria-label="Behance Sophie Turner").social__svg
+              svg(width="18", height="16", aria-label="Behance Sophie Turner").social__svg
                 use(xlink:href="img/symbol/sprite.svg#behance")
       .team__item.team__item--active
+        h3.team__name Sophie Turner
+        p.team__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ul.team__social.social
+          li.social__item
+            a(href="#").social__link
+              svg(width="18", height="18", aria-label="Twitter Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#twitter")
+          li.social__item
+            a(href="#").social__link
+              svg(width="10", height="18", aria-label="Facebook Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#facebook")
+          li.social__item
+            a(href="#").social__link
+              svg(width="21", height="20", aria-label="Linkedin Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#linkedin")
+          li.social__item
+            a(href="#").social__link
+              svg(width="18", height="18", aria-label="Dribbble Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#dribbble")
+          li.social__item
+            a(href="#").social__link
+              svg(width="18", height="16", aria-label="Behance Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#behance")
       .team__item
+        h3.team__name Sophie Turner
+        p.team__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ul.team__social.social
+          li.social__item
+            a(href="#").social__link
+              svg(width="18", height="18", aria-label="Twitter Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#twitter")
+          li.social__item
+            a(href="#").social__link
+              svg(width="10", height="18", aria-label="Facebook Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#facebook")
+          li.social__item
+            a(href="#").social__link
+              svg(width="21", height="20", aria-label="Linkedin Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#linkedin")
+          li.social__item
+            a(href="#").social__link
+              svg(width="18", height="18", aria-label="Dribbble Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#dribbble")
+          li.social__item
+            a(href="#").social__link
+              svg(width="18", height="16", aria-label="Behance Sophie Turner").social__svg
+                use(xlink:href="img/symbol/sprite.svg#behance")
+
