разметка блока contacts

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,3 +17,4 @@ html(lang="ru")
     include parts/services.pug
     include parts/reviews.pug
     include parts/team.pug
+    include parts/contacts.pug
