разметка блока footer

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -18,3 +18,4 @@ html(lang="ru")
     include parts/reviews.pug
     include parts/team.pug
     include parts/contacts.pug
+    include parts/footer.pug
