--- a/src/pug/parts/services.pug
+++ b/src/pug/parts/services.pug
@@ -9,7 +9,9 @@ section.services.wrap
         button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
+          picture
+            source(srcset="img/img1.webp", type="image/webp", width="250", height="150")
+            img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 
@@ -19,7 +21,9 @@ section.services.wrap
         button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
+          picture
+            source(srcset="img/img1.webp", type="image/webp", width="250", height="150")
+            img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 
@@ -29,7 +33,9 @@ section.services.wrap
         button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
+          picture
+            source(srcset="img/img1.webp", type="image/webp", width="250", height="150")
+            img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 
@@ -39,7 +45,9 @@ section.services.wrap
         button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
+          picture
+            source(srcset="img/img1.webp", type="image/webp", width="250", height="150")
+            img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
     
@@ -49,6 +57,8 @@ section.services.wrap
         button(type="button", aria-label="Открыть меню").services__button
       .services__content
         p.services__img
-          img(src="img/img1.jpg", alt="statistic", width="250", height="150")
+          picture
+            source(srcset="img/img1.webp", type="image/webp", width="250", height="150")
+            img(src="img/img1.jpg", alt="statistic", width="250", height="150")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
