--- a/src/pug/parts/footer.pug
+++ b/src/pug/parts/footer.pug
@@ -2,7 +2,9 @@ footer.footer
   .footer__wrap.wrap
     .footer__left
       a(href="#").footer__logo
-        img(src="img/logo.png", alt="Логотип Dart", width="180", height="30")
+        picture
+          source(srcset="img/logo.webp", type="image/webp", width="180", height="30")
+          img(src="img/logo.png", alt="Логотип Dart", width="180", height="30")
       ul.footer__menu.footer__menu--left.menu
         li.menu__item
           a(href="#").menu__link Privecy Policy
