--- a/src/pug/parts/reviews.pug
+++ b/src/pug/parts/reviews.pug
@@ -8,13 +8,17 @@ section.reviews
     .reviews__block
       .reviews__item
         .reviews__avatar
-          img(src="img/quote1.jpg", alt="Аватар Jonh Doe", width="60", height="60").reviews__img
+          picture
+            source(srcset="img/quote1.webp", type="image/webp", width="60", height="60")
+            img(src="img/quote1.jpg", alt="Аватар Jonh Doe", width="60", height="60").reviews__img
         .reviews__quote-wrap
           p.reviews__author Jonh Doe
           blockquote.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
       .reviews__item
         .reviews__avatar
-          img(src="img/quote2.jpg", alt="Аватар Khalessi", width="60", height="60").reviews__img
+          picture
+            source(srcset="img/quote2.webp", type="image/webp", width="60", height="60")
+            img(src="img/quote2.jpg", alt="Аватар Khalessi", width="60", height="60").reviews__img
         .reviews__quote-wrap
           p.reviews__author Khalessi
           blockquote.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
