подключение lite-youtube

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,6 +5,7 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="css/lite-yt-embed.css")
     title Dart
   body 
     h1.visually-hidden Dart
@@ -19,3 +20,5 @@ html(lang="ru")
     include parts/team.pug
     include parts/contacts.pug
     include parts/footer.pug
+
+    script(src="js/all.min.js") 
