--- a/src/pug/parts/banner.pug
+++ b/src/pug/parts/banner.pug
@@ -8,5 +8,6 @@ section.banner
   
   .banner__right
     .banner__iframe
-      <iframe class="banner__video" width="560" height="315" src="https://www.youtube.com/embed/nTtuiBXKp88" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      //- <iframe class="banner__video" width="560" height="315" src="https://www.youtube.com/embed/nTtuiBXKp88" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <lite-youtube class="banner__video" videoid="nTtuiBXKp88" playlabel="Play: Keynote (Google I/O '18)"></lite-youtube>
     
