--- a/src/pug/parts/banner.pug
+++ b/src/pug/parts/banner.pug
@@ -3,8 +3,8 @@ section.banner
   .banner__left
     p.banner__title lorem Ipsum Dolor sit amet
     p.banner__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc
-    a.banner__button Buy now
-    a.banner__button.banner__button--light Try for free
+    a(href="#").banner__button Buy now
+    a(href="#").banner__button.banner__button--light Try for free
   
   .banner__right
     .banner__iframe
