--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -23,7 +23,7 @@
   margin: 20px auto;
   font-size: 15px;
   line-height: 25px;
-  color: $blueGray;
+  color: #6e777b;
   text-align: center;
 }
 
