--- a/src/scss/blocks/team.scss
+++ b/src/scss/blocks/team.scss
@@ -17,7 +17,7 @@
   margin: 20px auto;
   font-size: 15px;
   line-height: 25px;
-  color: $blueGray;
+  color: #60686c;
 }
 
 .team__block {
@@ -116,7 +116,7 @@
 .team__text {
   font-size: 15px;
   line-height: 25px;
-  color: $blueGray3;
+  color: #5c6a72;
 }
 
 .team__social {
