--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,6 +4,8 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="description", content="Dart")
+    meta(name="keywords", content="dart,two")
     link(rel="stylesheet", href="css/style.css")
     link(rel="stylesheet", href="css/lite-yt-embed.css")
     title Dart
