--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -79,7 +79,7 @@
 }
 
 .contacts__button {
-  @include button($width: auto, $height: 55px, $bg: $greenLight, $fz: 15px, $lh: 15px, $border: none, $br: 4px, $color: $white) {
+  @include button($width: auto, $height: 55px, $bg: $greenLight, $fz: 15px, $lh: 15px, $border: none, $br: 4px, $color: #494949) {
     min-width: 130px;
     padding: 20px 25px;
     font-weight: 600;
