подключение min css

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,7 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="description", content="Dart")
     meta(name="keywords", content="dart,two")
-    link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="css/style.min.css")
     link(rel="stylesheet", href="css/lite-yt-embed.css")
     title Dart
   body 
