--- a/src/scss/blocks/features.scss
+++ b/src/scss/blocks/features.scss
@@ -22,7 +22,7 @@
   font-size: 25px;
   font-weight: 600;
   line-height: 28px;
-  color: #7d8990;
+  color: #758994;
 
   @media (max-width: 768px) {
     font-size: 20px;
