--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,11 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="description", content="Dart")
     meta(name="keywords", content="dart,two")
+    link(rel="preload", href="css/style.min.css", as="style")
+    link(rel="preload", href="fonts/Raleway-ExtraBold.woff2", as="font")
+    link(rel="preload", href="fonts/Raleway-Regular.woff2", as="font")
+    link(rel="preload", href="fonts/Raleway-SemiBold.woff2", as="font")
+    link(rel="preload", href="js/all.min.js", as="script")
     link(rel="stylesheet", href="css/style.min.css")
     link(rel="stylesheet", href="css/lite-yt-embed.css")
     title Dart
