--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,7 +10,6 @@ html(lang="ru")
     link(rel="preload", href="fonts/Raleway-ExtraBold.woff2", as="font", crossorigin)
     link(rel="preload", href="fonts/Raleway-Regular.woff2", as="font", crossorigin)
     link(rel="preload", href="fonts/Raleway-SemiBold.woff2", as="font", crossorigin)
-    link(rel="preload", href="js/all.min.js", as="script")
     link(rel="stylesheet", href="css/style.min.css")
     link(rel="stylesheet", href="css/lite-yt-embed.css")
     title Dart
@@ -28,4 +27,4 @@ html(lang="ru")
     include parts/contacts.pug
     include parts/footer.pug
 
-    script(src="js/all.min.js") 
+    script(src="js/script.js") 
