--- a/src/pug/parts/footer.pug
+++ b/src/pug/parts/footer.pug
@@ -3,7 +3,7 @@ footer.footer
     .footer__left
       a(href="#").footer__logo
         picture
-          source(srcset="img/logo.webp", type="image/webp", width="180", height="30")
+          source(srcset="img/logo.webp", type="image/webp")
           img(src="img/logo.png", alt="Логотип Dart", width="180", height="30")
       ul.footer__menu.footer__menu--left.menu
         li.menu__item
