--- a/src/pug/parts/reviews.pug
+++ b/src/pug/parts/reviews.pug
@@ -9,7 +9,7 @@ section.reviews
       .reviews__item
         .reviews__avatar
           picture
-            source(srcset="img/quote1.webp", type="image/webp", width="60", height="60")
+            source(srcset="img/quote1.webp", type="image/webp")
             img(src="img/quote1.jpg", alt="Аватар Jonh Doe", width="60", height="60").reviews__img
         .reviews__quote-wrap
           p.reviews__author Jonh Doe
@@ -17,7 +17,7 @@ section.reviews
       .reviews__item
         .reviews__avatar
           picture
-            source(srcset="img/quote2.webp", type="image/webp", width="60", height="60")
+            source(srcset="img/quote2.webp", type="image/webp")
             img(src="img/quote2.jpg", alt="Аватар Khalessi", width="60", height="60").reviews__img
         .reviews__quote-wrap
           p.reviews__author Khalessi
