--- a/src/pug/parts/header.pug
+++ b/src/pug/parts/header.pug
@@ -2,7 +2,7 @@ header.header
   nav.header__navigation
     a(href="#").header__logo
       picture
-        source(srcset="img/logo.webp", type="image/webp", width="180", height="30")
+        source(srcset="img/logo.webp", type="image/webp")
         img(src="img/logo.png", alt="Логотип Dart", width="180", height="30")
     ul.header__menu.menu
       li.menu__item
