--- a/src/pug/parts/services.pug
+++ b/src/pug/parts/services.pug
@@ -10,7 +10,7 @@ section.services.wrap
       .services__content
         p.services__img
           picture
-            source(srcset="img/img1.webp", type="image/webp", width="250", height="155")
+            source(srcset="img/img1.webp", type="image/webp")
             img(src="img/img1.jpg", alt="statistic", width="250", height="155")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -22,7 +22,7 @@ section.services.wrap
       .services__content
         p.services__img
           picture
-            source(srcset="img/img1.webp", type="image/webp", width="250", height="155")
+            source(srcset="img/img1.webp", type="image/webp")
             img(src="img/img1.jpg", alt="statistic", width="250", height="155")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -34,7 +34,7 @@ section.services.wrap
       .services__content
         p.services__img
           picture
-            source(srcset="img/img1.webp", type="image/webp", width="250", height="155")
+            source(srcset="img/img1.webp", type="image/webp")
             img(src="img/img1.jpg", alt="statistic", width="250", height="155")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -46,7 +46,7 @@ section.services.wrap
       .services__content
         p.services__img
           picture
-            source(srcset="img/img1.webp", type="image/webp", width="250", height="155")
+            source(srcset="img/img1.webp", type="image/webp")
             img(src="img/img1.jpg", alt="statistic", width="250", height="155")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -58,7 +58,7 @@ section.services.wrap
       .services__content
         p.services__img
           picture
-            source(srcset="img/img1.webp", type="image/webp", width="250", height="155")
+            source(srcset="img/img1.webp", type="image/webp")
             img(src="img/img1.jpg", alt="statistic", width="250", height="155")
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         p quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
