--- a/src/pug/parts/team.pug
+++ b/src/pug/parts/team.pug
@@ -4,24 +4,24 @@ section.team.wrap
 
   .team__block
     .team__tabs
-      .team__tab
+      .team__tab(data-tab="1")
         a(href="#").team__tab-link
           picture
-            source(srcset="img/avatar1.webp", type="image/webp", width="100", height="100")
+            source(srcset="img/avatar1.webp", type="image/webp")
             img(src="img/avatar1.jpg", alt="Аватар Sophie Turner", width="100", height="100")
-      .team__tab.team__tab--active
+      .team__tab.team__tab--active(data-tab="2")
         a(href="#").team__tab-link
           picture
-            source(srcset="img/avatar2.webp", type="image/webp", width="100", height="100")
+            source(srcset="img/avatar2.webp", type="image/webp")
             img(src="img/avatar2.jpg", alt="Аватар Sophie Turner", width="100", height="100")
-      .team__tab
+      .team__tab(data-tab="3")
         a(href="#").team__tab-link
           picture
-            source(srcset="img/avatar3.webp", type="image/webp", width="100", height="100")
+            source(srcset="img/avatar3.webp", type="image/webp")
             img(src="img/avatar3.jpg", alt="Аватар Sophie Turner", width="100", height="100")
     .team__content
-      .team__item
-        h3.team__name Sophie Turner
+      .team__item(data-tab="1")
+        h3.team__name Sophie Turner1
         p.team__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
         ul.team__social.social
           li.social__item
@@ -44,8 +44,8 @@ section.team.wrap
             a(href="#").social__link
               svg(width="18", height="16", aria-label="Behance Sophie Turner").social__svg
                 use(xlink:href="img/symbol/sprite.svg#behance")
-      .team__item.team__item--active
-        h3.team__name Sophie Turner
+      .team__item.team__item--active(data-tab="2")
+        h3.team__name Sophie Turner2
         p.team__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
         ul.team__social.social
           li.social__item
@@ -68,8 +68,8 @@ section.team.wrap
             a(href="#").social__link
               svg(width="18", height="16", aria-label="Behance Sophie Turner").social__svg
                 use(xlink:href="img/symbol/sprite.svg#behance")
-      .team__item
-        h3.team__name Sophie Turner
+      .team__item(data-tab="3")
+        h3.team__name Sophie Turner3
         p.team__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
         ul.team__social.social
           li.social__item
